<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.foodquiz.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/score_icon" />

        <TextView
            style="@style/YourScore"
            android:text="@string/your_score" />

        <TextView
            style="@style/Score"
            android:id="@+id/score"
            android:text="@string/score" />

        <TextView
            style="@style/Congrats"
            android:text="@string/congrats" />

        <TextView
            style="@style/Result"
            android:id="@+id/q1_ans"
            android:text="@string/q1_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/check_true" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q1_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q2_ans"
            android:text="@string/q2_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/check_true" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q2_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q3_ans"
            android:text="@string/q3_ans" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q3_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q4_ans"
            android:text="@string/q4_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/q4_check2" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q4_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q5_ans"
            android:text="@string/q5_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/q5_check1" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q5_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q6_ans"
            android:text="@string/q6_ans" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q6_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q7_ans"
            android:text="@string/q7_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/check_true" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q7_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q8_ans"
            android:text="@string/q8_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/q8_check2" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q8_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q9_ans"
            android:text="@string/q9_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/check_true" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q9_explanation" />

        <TextView
            style="@style/Result"
            android:id="@+id/q10_ans"
            android:text="@string/q10_ans" />

        <TextView
            style="@style/CorrectAnswer"
            android:text="@string/q10_check2" />

        <TextView
            style="@style/Explanation"
            android:text="@string/q10_explanation" />


    </LinearLayout>



</ScrollView>
