<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.foodquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextTitle"
            android:text="@string/app_name" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/food_icon" />

        <TextView
            style="@style/TextViewQuestionNoTopMargin"
            android:text="@string/q1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButtonTrue"
                android:id="@+id/q1_answer_true" />

            <RadioButton
                style="@style/RadioButtonFalse"
                android:id="@+id/q1_answer_false" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButtonTrue"
                android:id="@+id/q2_answer_true" />

            <RadioButton
                style="@style/RadioButtonFalse"
                android:id="@+id/q2_answer_false" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q3" />

        <CheckBox
            style="@style/CheckBox"
            android:id="@+id/q3_ans1"
            android:text="@string/q3_ans1" />

        <CheckBox
            style="@style/CheckBox"
            android:id="@+id/q3_ans2"
            android:text="@string/q3_ans2" />

        <CheckBox
            style="@style/CheckBox"
            android:id="@+id/q3_ans3"
            android:text="@string/q3_ans3" />

        <CheckBox
            style="@style/CheckBox"
            android:id="@+id/q3_ans4"
            android:text="@string/q3_ans4" />

        <CheckBox
            style="@style/CheckBox"
            android:id="@+id/q3_ans5"
            android:text="@string/q3_ans5" />

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButtonLeft"
                android:id="@+id/q4_check1"
                android:layout_weight="0.7"
                android:text="@string/q4_check1" />

            <RadioButton
                style="@style/RadioButtonNormal"
                android:id="@+id/q4_check2"
                android:text="@string/q4_check2" />

            <RadioButton
                style="@style/RadioButtonNormal"
                android:id="@+id/q4_check3"
                android:text="@string/q4_check3" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q5_check1"
                android:text="@string/q5_check1" />

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q5_check2"
                android:text="@string/q5_check2" />

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q5_check3"
                android:text="@string/q5_check3" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q6" />

        <EditText
            style="@style/EditText"
            android:id="@+id/q6_edit_text"
            android:hint="@string/q6_hint"
            android:inputType="number" />

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q7" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButtonTrue"
                android:id="@+id/q7_answer_true" />

            <RadioButton
                style="@style/RadioButtonFalse"
                android:id="@+id/q7_answer_false" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q8" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q8_check1"
                android:text="@string/q8_check1" />

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q8_check2"
                android:text="@string/q8_check2" />

        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q9" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButtonTrue"
                android:id="@+id/q9_answer_true" />

            <RadioButton
                style="@style/RadioButtonFalse"
                android:id="@+id/q9_answer_false" />
        </RadioGroup>

        <TextView
            style="@style/TextViewQuestion"
            android:text="@string/q10" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q10_check1"
                android:text="@string/q10_check1" />

            <RadioButton
                style="@style/RadioButtonVertical"
                android:id="@+id/q10_check2"
                android:text="@string/q10_check2" />

        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/submit"
            android:textColor="@color/greenColorText"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</ScrollView>
